Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27341

Find configuration dropdown menu is not visible in multi monitor setup

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 7.0.1
    • Qt Creator 7.0.0
    • Editors
    • None
    • Windows 10
    • Windows
    • 221b52d01a (qt-creator/qt-creator/7.0) 221b52d01a (qt-creator/qt-creator/master) 221b52d01a (qt-creator/qt-creator/qds-3.3) 221b52d01a (qt-creator/tqtc-qt-creator/7.0)

    Description

      I have a multi monitor setup with 2 monitors next to each other and 1 monitor on the right below the other 2 (like a 2 x 2 grid but with the lower left monitor missing).

      When I have Qt Creator running on the upper left monitor and try to open the Find drop down menu where the selections are for "Case Sensitive", "Whole Words Only", etc, the menu is not shown/visible.

      When I have Qt creator running in the top right display, the menu is shown in the lower right monitor, leading me to believe that in the failing case above, the menu is "drawn on the non-existing lower left monitor".

      When I position Qt Creator on the lower right monitor, the drop down menu is not shown below the find bar, but above it, as it here seems to know that there is not enough room below.

      Attached in a (partial) screen capture of the case that Qt creator is positioned on the upper right monitor, with a part of the lower right monitor in the screen capture. Do note that this is not the problem. This image is just to show what might be the problem when Qt Creator is located on the top left monitor. An image of this problematic case (with Qt Creator located on the top left monitor) however does not add any information as it does not show the menu (which is the problem). 

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davschul David Schulz
            ThiemoVanEngelen Thiemo van Engelen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes