Core: fix OptionsPopup positioning

Do not limit the popups coordinates to positive y coordinates, since
Monitors above the main monitor have a negative y coordinate. Use the
the available geometry of the parent widgets screen to check for
sensible coordinates instead.

Fixes: QTCREATORBUG-27341
Change-Id: I6e1572f7b2d3c83feafcf71392e265e14e6b457d
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>